syntax = "proto3";

package common;

message User {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
}

message PasswordUser {
  User user = 1;
  string password = 2;
}
